ci/templates/k8s-spa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __APP_NAME__
  labels:
    app: __APP_NAME__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: __APP_NAME__
  template:
    metadata:
      labels:
        app: __APP_NAME__
    spec:
      containers:
        - name: __APP_NAME__
          image: ghcr.io/__OWNER__/__APP_NAME__:latest
          ports:
            - containerPort: 80
